Completa estructura y flujo funcional de GalenoSv